chore(icons): update icon sizes and add kendo prefix to vars
BREAKING CHANGE: Added kendo prefix to all icon variables:

Change variable names from `$icon-*` to `$kendo-icon-*`.

BREAKING CHANGE: Icons font sizes are updated as follows:

* $kendo-icon-size-xs -> 12px (0.75 * $kendo-icon-size)
* $kendo-icon-size-sm -> 14px (0.875 * $kendo-icon-size)
* $kendo-icon-size-md -> 16px ($kendo-icon-size)
* $kendo-icon-size-lg -> 20px (1.25 * $kendo-icon-size)
* $kendo-icon-size-xl -> 24px (1.5 * $kendo-icon-size)
* $kendo-icon-size-xxl -> 32px (2 * $kendo-icon-size)
* $kendo-icon-size-xxxl -> 48px (3 * $kendo-icon-size)

--- a/packages/bootstrap/scss/bottom-navigation/_variables.scss
+++ b/packages/bootstrap/scss/bottom-navigation/_variables.scss
@@ -13,7 +13,7 @@ $bottom-nav-item-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
 $bottom-nav-item-padding-y: 0 !default;
 $bottom-nav-item-min-width: 72px !default;
 $bottom-nav-item-max-width: null !default;
-$bottom-nav-item-min-height: calc( #{$icon-size * 2.5} + #{k-map-get( $kendo-spacing, 4 )} - #{$bottom-nav-padding-x * 2} ) !default;
+$bottom-nav-item-min-height: calc( #{$kendo-icon-size * 2.5} + #{k-map-get( $kendo-spacing, 4 )} - #{$bottom-nav-padding-x * 2} ) !default;
 $bottom-nav-item-border-radius: null !default;
 $bottom-nav-item-gap: 0 k-map-get( $kendo-spacing, 1 ) !default;
 
