--- a/packages/bootstrap/scss/drawer/_variables.scss
+++ b/packages/bootstrap/scss/drawer/_variables.scss
@@ -23,7 +23,7 @@ $kendo-drawer-item-line-height: $line-height-lg !default;
 $kendo-drawer-item-level-padding-x: $kendo-drawer-item-padding-x !default;
 $kendo-drawer-item-level-count: 5 !default;
 
-$kendo-drawer-icon-size: $icon-size !default;
+$kendo-drawer-icon-size: $kendo-icon-size !default;
 
 $kendo-drawer-mini-initial-width: calc( 2 * #{$kendo-drawer-item-padding-x} + #{$kendo-drawer-icon-size} ) !default;
 
