--- a/packages/bootstrap/scss/rating/_variables.scss
+++ b/packages/bootstrap/scss/rating/_variables.scss
@@ -12,7 +12,7 @@ $rating-label-margin-x: $kendo-padding-md-x !default;
 $rating-label-margin-y: $kendo-padding-md-y !default;
 $rating-label-line-height: $line-height-lg !default;
 
-$rating-icon-size: ($icon-size * 1.5) !default;
+$rating-icon-size: ($kendo-icon-size * 1.5) !default;
 
 $rating-icon-text: $kendo-subtle-text !default;
 $rating-icon-selected-text: $kendo-selected-bg !default;
