--- a/packages/classic/scss/dropzone/_variables.scss
+++ b/packages/classic/scss/dropzone/_variables.scss
@@ -13,7 +13,7 @@ $dropzone-bg: $base-bg !default;
 $dropzone-text: $base-text !default;
 $dropzone-border: $base-border !default;
 
-$dropzone-icon-size: ( $icon-size * 3 ) !default;
+$dropzone-icon-size: ( $kendo-icon-size * 3 ) !default;
 $dropzone-icon-spacing: k-map-get( $kendo-spacing, 6 ) !default;
 $dropzone-icon-text: k-try-tint( $dropzone-text, 4 ) !default;
 $dropzone-icon-hover-text: $kendo-color-primary !default;
