--- a/packages/default/scss/button/_layout.scss
+++ b/packages/default/scss/button/_layout.scss
@@ -15,7 +15,7 @@
         display: inline-flex;
         align-items: center;
         justify-content: center;
-        gap: $icon-spacing;
+        gap: $kendo-icon-spacing;
         vertical-align: middle;
         user-select: none;
         cursor: pointer;
