--- a/packages/default/scss/color-preview/_layout.scss
+++ b/packages/default/scss/color-preview/_layout.scss
@@ -39,7 +39,7 @@
         gap: 2px;
 
         .k-color-preview-mask {
-            width: calc( #{$icon-size} - 2px );
+            width: calc( #{$kendo-icon-size} - 2px );
             height: 2px;
         }
     }
