--- a/packages/default/scss/menu/_layout.scss
+++ b/packages/default/scss/menu/_layout.scss
@@ -75,7 +75,7 @@
 
     // Expand arrow
     .k-menu-expand-arrow {
-        margin-inline-end: -$icon-spacing;
+        margin-inline-end: -$kendo-icon-spacing;
         display: inline-flex;
         flex-flow: row wrap;
         align-items: center;
