--- a/packages/default/scss/panelbar/_layout.scss
+++ b/packages/default/scss/panelbar/_layout.scss
@@ -40,7 +40,7 @@
                 font-weight: 500;
                 display: flex;
                 flex-flow: row nowrap;
-                gap: $icon-spacing;
+                gap: $kendo-icon-spacing;
                 align-items: center;
                 align-content: center;
                 position: relative;
@@ -76,7 +76,7 @@
                 text-decoration: none;
                 display: flex;
                 flex-flow: row nowrap;
-                gap: $icon-spacing;
+                gap: $kendo-icon-spacing;
                 align-items: center;
                 align-content: center;
                 position: relative;
