--- a/packages/default/scss/timeline/_layout.scss
+++ b/packages/default/scss/timeline/_layout.scss
@@ -197,7 +197,7 @@
             }
 
             .k-event-collapse {
-                margin: -$icon-spacing 0;
+                margin: -$kendo-icon-spacing 0;
                 transform: rotate(90deg);
                 transition: transform .2s ease-in-out;
             }
