--- a/packages/material/scss/notification/_variables.scss
+++ b/packages/material/scss/notification/_variables.scss
@@ -27,7 +27,7 @@ $kendo-notification-line-height: k-math-div( 20, 14 ) !default;
 
 /// Horizontal spacing of the notification icon.
 /// @group notification
-$kendo-notification-icon-spacing: $icon-spacing !default;
+$kendo-notification-icon-spacing: $kendo-icon-spacing !default;
 
 /// Background color of the notification.
 /// @group notification
