--- a/packages/bootstrap/scss/grid/_variables.scss
+++ b/packages/bootstrap/scss/grid/_variables.scss
@@ -117,7 +117,7 @@ $kendo-grid-sizes: (
 
 $kendo-grid-header-font-size: null !default;
 $kendo-grid-header-first-border: 1px !default;
-$kendo-grid-header-menu-icon-spacing: $icon-spacing !default;
+$kendo-grid-header-menu-icon-spacing: $kendo-icon-spacing !default;
 
 $kendo-grid-filterable-icon-spacing: calc( #{$kendo-button-calc-size} + #{$kendo-grid-header-menu-icon-spacing} ) !default;
 
@@ -196,8 +196,8 @@ $kendo-grid-grouping-row-text: $kendo-grid-text !default;
 
 $kendo-grid-sorted-bg: rgba( k-contrast-color( $kendo-grid-bg ), .02 ) !default;
 $kendo-grid-sorting-indicator-text: $kendo-color-primary !default;
-$kendo-grid-sorting-index-font-size: ($icon-size * .75) !default;
-$kendo-grid-sorting-index-height: $icon-size !default;
+$kendo-grid-sorting-index-font-size: ($kendo-icon-size * .75) !default;
+$kendo-grid-sorting-index-height: $kendo-icon-size !default;
 $kendo-grid-sorting-index-spacing-y: 2px !default;
 $kendo-grid-sorting-index-spacing-x: -$kendo-grid-sorting-index-spacing-y !default;
 
@@ -259,11 +259,11 @@ $kendo-grid-column-menu-group-header-bg: null !default;
 $kendo-grid-column-menu-group-header-text: $popup-text !default;
 $kendo-grid-column-menu-group-header-border: $popup-border !default;
 
-$kendo-grid-drag-cell-width: ($icon-size * 3) !default;
+$kendo-grid-drag-cell-width: ($kendo-icon-size * 3) !default;
 
 $kendo-grid-row-inner-height: calc( #{$line-height-em} + #{$kendo-grid-cell-padding-y * 2} ) !default;
 
-$kendo-grid-hierarchy-col-width: ($icon-size * 2) !default;
+$kendo-grid-hierarchy-col-width: ($kendo-icon-size * 2) !default;
 
 $kendo-grid-grouping-row-border-top: 1px !default;
 $kendo-grid-group-footer-border-y: 1px !default;
