--- a/packages/classic/scss/pdf-viewer/_variables.scss
+++ b/packages/classic/scss/pdf-viewer/_variables.scss
@@ -43,4 +43,4 @@ $pdf-viewer-search-highlight-bg: $kendo-body-text !default;
 $pdf-viewer-search-highlight-mark-bg: yellow !default;
 
 $pdf-viewer-icon-text: $dropzone-icon-text !default;
-$pdf-viewer-icon-size: calc( #{$icon-size} * 3 ) !default;
+$pdf-viewer-icon-size: calc( #{$kendo-icon-size} * 3 ) !default;
