--- a/packages/default/scss/_variables.scss
+++ b/packages/default/scss/_variables.scss
@@ -56,10 +56,18 @@ $default-scrollbar-width: 17px !default;
 
 
 // Icons
-$icon-size: 16px !default;
-$icon-size-lg: 32px !default;
-$icon-spacing: k-map-get( $kendo-spacing, 1 ) !default;
-$icon-padding: k-map-get( $kendo-spacing, 1 ) !default;
+$kendo-icon-size: 16px !default;
+
+$kendo-icon-size-xs: calc( #{$kendo-icon-size} * .75 ) !default;
+$kendo-icon-size-sm: calc( #{$kendo-icon-size} * .875 ) !default;
+$kendo-icon-size-md: $kendo-icon-size !default;
+$kendo-icon-size-lg: calc( #{$kendo-icon-size} * 1.25 ) !default;
+$kendo-icon-size-xl: calc( #{$kendo-icon-size} * 1.5 ) !default;
+$kendo-icon-size-xxl: calc( #{$kendo-icon-size} * 2 ) !default;
+$kendo-icon-size-xxxl: calc( #{$kendo-icon-size} * 3 ) !default;
+
+$kendo-icon-spacing: k-map-get( $kendo-spacing, 1 ) !default;
+$kendo-icon-padding: k-map-get( $kendo-spacing, 1 ) !default;
 
 // Metrics
 $kendo-padding-x: 8px !default;
