--- a/packages/default/scss/gantt/_layout.scss
+++ b/packages/default/scss/gantt/_layout.scss
@@ -610,7 +610,7 @@
             display: block;
         }
         .k-task-pct {
-            font-size: $icon-size-lg;
+            font-size: $kendo-icon-size-xxl;
         }
         ul {
             line-height: normal;
