--- a/packages/default/scss/input/_layout.scss
+++ b/packages/default/scss/input/_layout.scss
@@ -201,7 +201,7 @@
     .k-input-separator {
         margin: 0;
         width: 0;
-        height: $icon-size;
+        height: $kendo-icon-size;
         border-width: 0 0 0 1px;
         border-style: solid;
         border-color: inherit;
