--- a/packages/default/scss/input/_variables.scss
+++ b/packages/default/scss/input/_variables.scss
@@ -49,7 +49,7 @@ $kendo-input-sizes: (
         padding-y: $kendo-input-padding-y-sm,
         font-size: $kendo-input-font-size-sm,
         line-height: $kendo-input-line-height-sm,
-        icon-size: calc( #{$icon-size} + #{$kendo-input-padding-y-sm * 2} ),
+        icon-size: calc( #{$kendo-icon-size} + #{$kendo-input-padding-y-sm * 2} ),
         button-padding-x: $kendo-input-padding-y-sm,
         button-padding-y: $kendo-input-padding-y-sm
     ),
@@ -58,7 +58,7 @@ $kendo-input-sizes: (
         padding-y: $kendo-input-padding-y-md,
         font-size: $kendo-input-font-size-md,
         line-height: $kendo-input-line-height-md,
-        icon-size: calc( #{$icon-size} + #{$kendo-input-padding-y-md * 2} ),
+        icon-size: calc( #{$kendo-icon-size} + #{$kendo-input-padding-y-md * 2} ),
         button-padding-x: $kendo-input-padding-y-md,
         button-padding-y: $kendo-input-padding-y-md
     ),
@@ -67,7 +67,7 @@ $kendo-input-sizes: (
         padding-y: $kendo-input-padding-y-lg,
         font-size: $kendo-input-font-size-lg,
         line-height: $kendo-input-line-height-lg,
-        icon-size: calc( #{$icon-size} + #{$kendo-input-padding-y-lg * 2} ),
+        icon-size: calc( #{$kendo-icon-size} + #{$kendo-input-padding-y-lg * 2} ),
         button-padding-x: $kendo-input-padding-y-lg,
         button-padding-y: $kendo-input-padding-y-lg
     )
