--- a/packages/default/scss/menu/_variables.scss
+++ b/packages/default/scss/menu/_variables.scss
@@ -18,7 +18,7 @@ $menu-gradient: null !default;
 $menu-item-padding-x: k-map-get( $kendo-spacing, 3 ) !default;
 $menu-item-padding-y: k-map-get( $kendo-spacing, 1.5 ) !default;
 $menu-item-spacing: 0 !default;
-$menu-item-icon-spacing: $icon-spacing !default;
+$menu-item-icon-spacing: $kendo-icon-spacing !default;
 
 $menu-item-bg: null !default;
 $menu-item-text: $link-text !default;
@@ -110,10 +110,10 @@ $kendo-menu-popup-item-padding-y-lg: k-map-get( $kendo-spacing, 1.5 ) !default;
 
 /// The end padding of the menu item in popup.
 /// @group menu
-$kendo-menu-popup-item-padding-end: calc( #{$kendo-menu-popup-item-padding-x * 2} + #{$icon-size} ) !default;
-$kendo-menu-popup-item-padding-end-sm: calc( #{$kendo-menu-popup-item-padding-x-sm * 2} + #{$icon-size} ) !default;
-$kendo-menu-popup-item-padding-end-md: calc( #{$kendo-menu-popup-item-padding-x-md * 2} + #{$icon-size} ) !default;
-$kendo-menu-popup-item-padding-end-lg: calc( #{$kendo-menu-popup-item-padding-x-lg * 2} + #{$icon-size} ) !default;
+$kendo-menu-popup-item-padding-end: calc( #{$kendo-menu-popup-item-padding-x * 2} + #{$kendo-icon-size} ) !default;
+$kendo-menu-popup-item-padding-end-sm: calc( #{$kendo-menu-popup-item-padding-x-sm * 2} + #{$kendo-icon-size} ) !default;
+$kendo-menu-popup-item-padding-end-md: calc( #{$kendo-menu-popup-item-padding-x-md * 2} + #{$kendo-icon-size} ) !default;
+$kendo-menu-popup-item-padding-end-lg: calc( #{$kendo-menu-popup-item-padding-x-lg * 2} + #{$kendo-icon-size} ) !default;
 
 /// The start margin of the menu item expand icon.
 /// @group menu
