--- a/packages/default/scss/scheduler/_layout.scss
+++ b/packages/default/scss/scheduler/_layout.scss
@@ -220,7 +220,7 @@
             display: inline-flex;
             flex-flow: row nowrap;
             align-items: center;
-            gap: $icon-spacing;
+            gap: $kendo-icon-spacing;
             cursor: pointer;
         }
 
