--- a/packages/default/scss/toolbar/_layout.scss
+++ b/packages/default/scss/toolbar/_layout.scss
@@ -229,7 +229,7 @@
             flex-flow: row nowrap;
             align-items: center;
             align-content: center;
-            gap: $icon-spacing;
+            gap: $kendo-icon-spacing;
             justify-content: flex-start;
             position: relative;
         }
