--- a/packages/default/scss/treeview/_layout.scss
+++ b/packages/default/scss/treeview/_layout.scss
@@ -84,15 +84,15 @@
 
     // Loading icon
     .k-treeview-loading {
-        margin-right: $icon-spacing;
+        margin-right: $kendo-icon-spacing;
     }
 
 
     // Checkbox
     .k-treeview .k-checkbox-wrap,
     .k-treeview .k-checkbox-wrapper {
-        margin-left: $icon-spacing;
-        margin-right: $icon-spacing;
+        margin-left: $kendo-icon-spacing;
+        margin-right: $kendo-icon-spacing;
         align-self: center;
     }
 
@@ -112,7 +112,7 @@
         .k-icon,
         .k-image,
         .k-sprite {
-            margin-right: $icon-spacing;
+            margin-right: $kendo-icon-spacing;
         }
 
         &.k-focus {
@@ -153,7 +153,7 @@
         // Loading
         .k-treeview-loading {
             margin-right: 0;
-            margin-left: $icon-spacing;
+            margin-left: $kendo-icon-spacing;
         }
 
         // Treeview leaf
@@ -163,7 +163,7 @@
             .k-image,
             .k-sprite {
                 margin-right: 0;
-                margin-left: $icon-spacing;
+                margin-left: $kendo-icon-spacing;
             }
         }
     }
