--- a/packages/material/scss/breadcrumb/_variables.scss
+++ b/packages/material/scss/breadcrumb/_variables.scss
@@ -13,7 +13,7 @@ $breadcrumb-bg: $kendo-component-bg !default;
 $breadcrumb-text: $kendo-component-text !default;
 $breadcrumb-border: $kendo-component-border !default;
 
-$breadcrumb-delimiter-icon-font-size: $icon-size * .75 !default;
+$breadcrumb-delimiter-icon-font-size: $kendo-icon-size * .75 !default;
 
 $breadcrumb-link-padding-x: k-map-get( $kendo-spacing, 2.5 ) !default;
 $breadcrumb-link-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
@@ -23,7 +23,7 @@ $breadcrumb-icon-link-padding-x: $breadcrumb-link-padding-x !default;
 $breadcrumb-icon-link-padding-y: $breadcrumb-icon-link-padding-x !default;
 
 $breadcrumb-root-link-spacing: $breadcrumb-link-padding-x !default;
-$breadcrumb-link-icon-spacing: $icon-spacing !default;
+$breadcrumb-link-icon-spacing: $kendo-icon-spacing !default;
 
 $breadcrumb-link-initial-text: inherit !default;
 
