--- a/packages/material/scss/grid/_variables.scss
+++ b/packages/material/scss/grid/_variables.scss
@@ -198,8 +198,8 @@ $kendo-grid-sorted-icon-spacing: 4px !default;
 $kendo-grid-sorted-bg: rgba( k-contrast-color( $kendo-grid-bg ), .04 ) !default;
 $kendo-grid-sorting-indicator-text: $kendo-grid-header-text !default;
 $kendo-grid-sorting-index-font-size: $font-size-sm !default;
-$kendo-grid-sorting-index-height: $icon-size !default;
-$kendo-grid-sorting-index-spacing-y: k-math-div( $icon-spacing, 2 ) !default;
+$kendo-grid-sorting-index-height: $kendo-icon-size !default;
+$kendo-grid-sorting-index-spacing-y: k-math-div( $kendo-icon-spacing, 2 ) !default;
 $kendo-grid-sorting-index-spacing-x: -$kendo-grid-sorting-index-spacing-y !default;
 
 $kendo-grid-focus-shadow: $kendo-table-focus-shadow !default;
@@ -260,7 +260,7 @@ $kendo-grid-column-menu-group-header-bg: null !default;
 $kendo-grid-column-menu-group-header-text: $popup-text !default;
 $kendo-grid-column-menu-group-header-border: $popup-border !default;
 
-$kendo-grid-drag-cell-width: ($icon-size * 3) !default;
+$kendo-grid-drag-cell-width: ($kendo-icon-size * 3) !default;
 
 $kendo-grid-row-inner-height: calc( #{$line-height-em} + #{$kendo-grid-cell-padding-y * 2} ) !default;
 
