--- a/packages/material/scss/menu/_variables.scss
+++ b/packages/material/scss/menu/_variables.scss
@@ -14,7 +14,7 @@ $menu-gradient: null !default;
 $menu-item-padding-x: k-map-get( $kendo-spacing, 4 ) !default;
 $menu-item-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
 $menu-item-spacing: k-map-get( $kendo-spacing, 0.5 ) !default; // sass-lint:disable-line leading-zero
-$menu-item-icon-spacing: $icon-spacing !default;
+$menu-item-icon-spacing: $kendo-icon-spacing !default;
 
 $menu-item-bg: rgba( $menu-text, 0 ) !default;
 $menu-item-text: null !default;
@@ -106,10 +106,10 @@ $kendo-menu-popup-item-padding-y-lg: k-map-get( $kendo-spacing, 2.5 ) !default;
 
 /// The end padding of the menu item in popup.
 /// @group menu
-$kendo-menu-popup-item-padding-end: calc( #{$kendo-menu-popup-item-padding-x * 2} + #{$icon-size} ) !default;
-$kendo-menu-popup-item-padding-end-sm: calc( #{$kendo-menu-popup-item-padding-x-sm * 2} + #{$icon-size} ) !default;
-$kendo-menu-popup-item-padding-end-md: calc( #{$kendo-menu-popup-item-padding-x-md * 2} + #{$icon-size} ) !default;
-$kendo-menu-popup-item-padding-end-lg: calc( #{$kendo-menu-popup-item-padding-x-lg * 2} + #{$icon-size} ) !default;
+$kendo-menu-popup-item-padding-end: calc( #{$kendo-menu-popup-item-padding-x * 2} + #{$kendo-icon-size} ) !default;
+$kendo-menu-popup-item-padding-end-sm: calc( #{$kendo-menu-popup-item-padding-x-sm * 2} + #{$kendo-icon-size} ) !default;
+$kendo-menu-popup-item-padding-end-md: calc( #{$kendo-menu-popup-item-padding-x-md * 2} + #{$kendo-icon-size} ) !default;
+$kendo-menu-popup-item-padding-end-lg: calc( #{$kendo-menu-popup-item-padding-x-lg * 2} + #{$kendo-icon-size} ) !default;
 
 /// The start margin of the menu item expand icon.
 /// @group menu
