chore(icons): update icon sizes and add kendo prefix to vars
BREAKING CHANGE: Added kendo prefix to all icon variables:

Change variable names from `$icon-*` to `$kendo-icon-*`.

BREAKING CHANGE: Icons font sizes are updated as follows:

* $kendo-icon-size-xs -> 12px (0.75 * $kendo-icon-size)
* $kendo-icon-size-sm -> 14px (0.875 * $kendo-icon-size)
* $kendo-icon-size-md -> 16px ($kendo-icon-size)
* $kendo-icon-size-lg -> 20px (1.25 * $kendo-icon-size)
* $kendo-icon-size-xl -> 24px (1.5 * $kendo-icon-size)
* $kendo-icon-size-xxl -> 32px (2 * $kendo-icon-size)
* $kendo-icon-size-xxxl -> 48px (3 * $kendo-icon-size)

--- a/packages/default/scss/gantt/_layout.scss
+++ b/packages/default/scss/gantt/_layout.scss
@@ -606,7 +606,7 @@
             display: block;
         }
         .k-task-pct {
-            font-size: $icon-size-lg;
+            font-size: $kendo-icon-size-xxl;
         }
         ul {
             line-height: normal;
