chore: update icons size vars in fluent

--- a/packages/fluent/scss/gantt/_layout.scss
+++ b/packages/fluent/scss/gantt/_layout.scss
@@ -614,7 +614,7 @@
             display: block;
         }
         .k-task-pct {
-            font-size: var( --kendo-icon-size-lg, 2rem );
+            font-size: var( --kendo-icon-size-xxl, 2rem );
         }
         ul {
             line-height: normal;
