--- a/packages/fluent/scss/map/_variables.scss
+++ b/packages/fluent/scss/map/_variables.scss
@@ -82,7 +82,7 @@ $kendo-map-attribution-bg: $kendo-color-white !default;
 
 /// Map marker size.
 /// @group map
-$kendo-map-marker-size: var( --kendo-icon-size-lg, 1rem ) !default;
+$kendo-map-marker-size: var( --kendo-icon-size-xxl, 2rem ) !default;
 /// Map marker fill color.
 /// @group map
 $kendo-map-marker-fill: get-theme-color-var( primary-100 ) !default;
