--- a/packages/fluent/scss/upload/_variables.scss
+++ b/packages/fluent/scss/upload/_variables.scss
@@ -76,7 +76,7 @@ $kendo-upload-icon-color: var( --kendo-subtle-text, inherit ) !default;
 
 /// Font size of the file icons in the upload.
 /// @group upload
-$kendo-upload-group-icon-size: var( --kendo-icon-size-lg, 2rem ) !default;
+$kendo-upload-group-icon-size: var( --kendo-icon-size-xxl, 2rem ) !default;
 
 /// Thickness of the upload progress bar.
 /// @group upload
