--- a/packages/fluent/scss/icon/_layout.scss
+++ b/packages/fluent/scss/icon/_layout.scss
@@ -7,6 +7,11 @@
 
 @mixin kendo-icon--layout() {
 
+    // kendo-icon-wrapper component
+    .k-icon-wrapper-host {
+        display: contents;
+    }
+
     .k-icon-with-modifier {
         position: relative;
         margin: .25em;
