--- a/packages/fluent/scss/input/_layout.scss
+++ b/packages/fluent/scss/input/_layout.scss
@@ -308,7 +308,7 @@
             position: relative;
             aspect-ratio: auto;
 
-            > .k-button-icon {
+            .k-button-icon {
                 margin: -1em 0;
                 min-width: auto !important; // sass-lint:disable-line no-important
                 min-height: auto !important; // sass-lint:disable-line no-important
